# ocaml-bitwuzla

./: .gitignore  .gitmodules  AUTHORS.md  CHANGES.md  README.md  bitwuzla-bin.opam  bitwuzla-c.opam  bitwuzla-cxx.opam  bitwuzla-cxx.opam.template  bitwuzla.ml  bitwuzla.mli  bitwuzla.opam  bitwuzla.opam.template  bitwuzla_c.ml  bitwuzla_c.mli  bitwuzla_cxx.ml  bitwuzla_cxx.mli  c_stubs.c  c_utils.c  cxx_stubs.cpp  cxx_utils.cpp  dune  dune-project  manager.ml  solver.ml  sort.ml  term.ml
.github/workflows/: ci.yml
api/: build_enum_kind.cpp  build_enum_kind.ml  build_enum_option.cpp  build_enum_option.ml  build_enum_result.cpp  build_enum_result.ml  build_enum_rounding_mode.cpp  build_enum_rounding_mode.ml  dune  options.ml
doc/: dune  index.mld
examples/: checksatassuming.ml  dune  pushpop.ml  quickstart.ml  terminator.ml  unsatassumption.ml  unsatassumptions.ml  unsatcore.ml
test/: dune  examples.ml  t_bitwuzla.ml  t_bitwuzla_c.ml  t_bitwuzla_cxx.ml  t_bitwuzla_cxx_5.ml
utils/: stringify.ml
