(library
 (public_name bitwuzla)
 (name bitwuzla)
 (modules bitwuzla)
 (foreign_stubs
  (language c)
  (names c_utils)
  (flags :standard -I/opt/homebrew/include)
  (include_dirs
   vendor/bitwuzla/src
   (lib zarith)))
 (libraries unix zarith bitwuzla-c))

(library
 (public_name bitwuzla-c)
 (name bitwuzla_c)
 (modules bitwuzla_c)
 (foreign_archives vendor/bitwuzla/bitwuzla vendor/bitwuzla/bitwuzlaxx
   vendor/bitwuzla/utils vendor/btor2tools/btor2parser vendor/cadical/cadical)
 (foreign_stubs
  (language c)
  (names c_stubs)
  (include_dirs vendor/bitwuzla/src/api/c))
 (c_library_flags :standard -L/opt/homebrew/lib -lstdc++ -lgmp -lpthread))
