(library
 (public_name bitwuzla-cxx)
 (name bitwuzla_cxx)
 (modules options sort roundingMode kind term result solver bitwuzla_cxx)
 (libraries zarith)
 (foreign_stubs
  (language cxx)
  (names cxx_utils cxx_stubs)
  (include_dirs
   vendor/bitwuzla/include
   vendor/bitwuzla/src
   vendor/bitwuzla/src/lib
   (lib zarith))
  (flags :standard -std=c++17 -I/opt/homebrew/include))
 (foreign_archives
  vendor/bitwuzla/src/api/cpp/bitwuzla-api
  vendor/bitwuzla/bitwuzla-cxx
  vendor/bitwuzla/src/lib/bitwuzla-libs
  vendor/cadical/cadical)
 (c_library_flags :standard -L/opt/homebrew/lib -lgmp)
 (library_flags -linkall))

(rule
 (deps api/options.exe)
 (target options.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))

(rule
 (deps api/result.exe)
 (target result.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))

(rule
 (deps api/rounding_mode.exe)
 (target roundingMode.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))

(rule
 (deps api/kind.exe)
 (target kind.ml)
 (action
  (with-stdout-to
   %{target}
   (run %{deps}))))
