(executable
 (name quickstart)
 (modules quickstart)
 (libraries bitwuzla-cxx))

(executable
 (name pushpop)
 (modules pushpop)
 (libraries bitwuzla-cxx))

(executable
 (name checksatassuming)
 (modules checksatassuming)
 (libraries bitwuzla-cxx))

(executable
 (name unsatcore)
 (modules unsatcore)
 (libraries bitwuzla-cxx))

(executable
 (name unsatassumptions)
 (modules unsatassumptions)
 (libraries bitwuzla-cxx))

(executable
 (name terminator)
 (modules terminator)
 (libraries unix bitwuzla-cxx))
