(library
 (name examples)
 (modules examples)
 (libraries unix bitwuzla_cxx))

(library
 (name t_bitwuzla_cxx)
 (optional)
 (modules t_bitwuzla_cxx)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_inline_test))
 (libraries bitwuzla-cxx examples))

(library
 (name t_bitwuzla_cxx_5)
 (optional)
 (enabled_if
  (> %{ocaml_version} 5))
 (modules t_bitwuzla_cxx_5)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_inline_test))
 (libraries bitwuzla-cxx examples))
